@@ -3809,7 +3809,7 @@ value of the variable `gnus-show-mime' is non-nil."
 			    (mm-handle-undisplayer handle)
 			    (mm-handle-disposition handle)
 			    (mm-handle-description handle)
-			    (mm-handle-cache handle)
+			    nil
 			    (mm-handle-id handle)))
       (setq gnus-article-mime-handles
 	    (mm-merge-handles gnus-article-mime-handles handle))
