@@ -55,6 +55,7 @@
 
 (defun gnus-backlog-shutdown ()
   "Clear all backlog variables and buffers."
+  (interactive)
   (when (get-buffer gnus-backlog-buffer)
     (kill-buffer gnus-backlog-buffer))
   (setq gnus-backlog-hashtb nil
